RESOLVED FIXED151726
EventSenderProxy::swipeGestureWithWheelAndMomentumPhases() leaks an EventSenderSyntheticEvent
https://bugs.webkit.org/show_bug.cgi?id=151726
Summary EventSenderProxy::swipeGestureWithWheelAndMomentumPhases() leaks an EventSend...
David Kilzer (:ddkilzer)
Reported 2015-12-01 15:52:41 PST
The clang static analyzer correctly points out that EventSenderProxy::swipeGestureWithWheelAndMomentumPhases() leaks an EventSenderSyntheticEvent object each time it is called.
Attachments
Patch v1 (1.86 KB, patch)
2015-12-01 16:33 PST, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2015-12-01 16:33:50 PST
Created attachment 266408 [details] Patch v1
WebKit Commit Bot
Comment 2 2015-12-01 17:25:26 PST
Comment on attachment 266408 [details] Patch v1 Clearing flags on attachment: 266408 Committed r192933: <http://trac.webkit.org/changeset/192933>
WebKit Commit Bot
Comment 3 2015-12-01 17:25:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.