EventSenderProxy::swipeGestureWithWheelAndMomentumPhases() leaks an EventSenderSyntheticEvent <http://webkit.org/b/151726>

Reviewed by Simon Fraser.

* WebKitTestRunner/mac/EventSenderProxy.mm:
(WTR::EventSenderProxy::swipeGestureWithWheelAndMomentumPhases):
Deploy RetainPtr<EventSenderSyntheticEvent> to fix leak.


Canonical link: https://commits.webkit.org/169881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192933 268f45cc-cd09-0410-ab3c-d52691b4dbfc